# stead-core

./: .gitignore  .project-status  CHANGELOG.md  Cargo.toml  README.md
.github/: CODEOWNERS
crates/stead-core-cli/: Cargo.toml
crates/stead-core-cli/src/: main.rs
crates/stead-core-cli/tests/: e2e_cli.rs  stress_cli.rs
crates/stead-session-adapters/: Cargo.toml
crates/stead-session-adapters/src/: claude.rs  codex.rs  lib.rs
crates/stead-session-adapters/tests/: claude_export_snapshot.rs  claude_list_and_import.rs  claude_roundtrip.rs  codex_export_snapshot.rs  codex_list_and_import.rs  codex_roundtrip.rs  compat_guardrails.rs  stress_roundtrip.rs
crates/stead-session-adapters/tests/common/: mod.rs
crates/stead-session-adapters/tests/fixtures/compat/claude/: queue-sidechain-mixed.jsonl  unknown-fields.jsonl
crates/stead-session-adapters/tests/fixtures/compat/codex/: legacy-sparse-session-meta.jsonl  unknown-fields.jsonl
crates/stead-session-adapters/tests/snapshots/: claude_export_snapshot__exported_claude_jsonl_snapshot_is_stable.snap  codex_export_snapshot__exported_codex_jsonl_snapshot_is_stable.snap
crates/stead-session-adapters/tests/support/: mod.rs
crates/stead-session-model/: Cargo.toml
crates/stead-session-model/src/: lib.rs
crates/stead-session-model/tests/: canonical_contract.rs  json_schema_contract.rs  property_session_uid.rs  snapshot_session_json.rs
crates/stead-session-model/tests/snapshots/: snapshot_session_json__canonical_json_snapshot_is_stable.snap
docs/: DESIGN_RATIONALE.md  MANUAL_DRIFT_REVIEW.md  SESSION_STANDARD.md  (+4 more)
(+9 files in other folders)
