[package]
name = "stead-core-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stead-core"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
stead-session-adapters = { path = "../stead-session-adapters" }
stead-session-model = { path = "../stead-session-model" }
twox-hash = "2"
uuid = { version = "1", features = ["v5"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
walkdir = "2"
