[package]
name = "stead-session-adapters"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stead-session-model = { path = "../stead-session-model" }
thiserror = "2"
walkdir = "2"

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
tempfile = "3"
