[package]
name = "stead-session-model"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
jsonschema = "0.33"
proptest = "1"
